feat(client): create header component

--- a/SharedShoppingList.Client/src/assets/i18n/en.json
+++ b/SharedShoppingList.Client/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+  "appName": "Shoppy",
   "welcomeBack": "Welcome Back",
   "noAccountQuestion": "Don't have an account?",
   "createAccountSuggestion": "Create one today!",
