feat(client): implement sign up component

--- a/SharedShoppingList.Client/src/assets/i18n/en.json
+++ b/SharedShoppingList.Client/src/assets/i18n/en.json
@@ -6,5 +6,10 @@
   "username": "username",
   "password": "password",
   "rememberMe": "Remember me",
-  "signIn": "Sign In"
+  "signIn": "sign in",
+  "signUp": "sign up",
+  "createAccount": "create account",
+  "alreadyHaveAnAccountQuestion": "Already have an account?",
+  "signInSuggestion": "Sign in now!",
+  "confirmPassword": "confirm password"
 }
