feat(client): implement sign out

--- a/SharedShoppingList.Client/src/assets/i18n/en.json
+++ b/SharedShoppingList.Client/src/assets/i18n/en.json
@@ -18,6 +18,9 @@
     "listHeader": "Your groups",
     "members": "member(s)"
   },
+  "menu": {
+    "signOut": "sign out"
+  },
   "errors": {
     "title": "An error occured",
     "codes": {
