feat(client): replace titlecase pipe calls with capitalizeFirst

--- a/SharedShoppingList.Client/src/assets/i18n/en.json
+++ b/SharedShoppingList.Client/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
   "appName": "Shoppy",
-  "welcomeBack": "Welcome Back",
+  "welcomeBack": "welcome back",
   "noAccountQuestion": "Don't have an account?",
   "createAccountSuggestion": "Create one today!",
   "username": "username",
