feat(client): add join button to UserGroups page

--- a/SharedShoppingList.Client/src/assets/i18n/en.json
+++ b/SharedShoppingList.Client/src/assets/i18n/en.json
@@ -16,7 +16,8 @@
   "createNew": "create new",
   "userGroups": {
     "listHeader": "Your groups",
-    "members": "member(s)"
+    "members": "member(s)",
+    "joinExisting": "join existing"
   },
   "menu": {
     "signOut": "sign out"
