feat(client): implement joining UserGroups

--- a/SharedShoppingList.Client/src/assets/i18n/en.json
+++ b/SharedShoppingList.Client/src/assets/i18n/en.json
@@ -21,7 +21,9 @@
     "listHeader": "Your groups",
     "members": "member(s)",
     "joinExisting": "join existing",
-    "createNew": "Create new group"
+    "createNew": "Create new group",
+    "join": "Join group",
+    "inviteCode": "invite code"
   },
   "menu": {
     "signOut": "sign out"
