feat(client): initialize UserGroup details page

--- a/SharedShoppingList.Client/src/assets/i18n/en.json
+++ b/SharedShoppingList.Client/src/assets/i18n/en.json
@@ -23,7 +23,9 @@
     "joinExisting": "join existing",
     "createNew": "Create new group",
     "join": "Join group",
-    "inviteCode": "invite code"
+    "inviteCode": "invite code",
+    "inviteCodes": "invite codes",
+    "shoppingList": "shopping list"
   },
   "menu": {
     "signOut": "sign out"
