--- a/SharedShoppingList.Client/src/assets/i18n/en.json
+++ b/SharedShoppingList.Client/src/assets/i18n/en.json
@@ -18,6 +18,7 @@
   "cancel": "cancel",
   "name": "name",
   "quantity": "quantity",
+  "confirmRemoval": "confirm removal",
   "userGroups": {
     "listHeader": "Your groups",
     "members": "member(s)",
@@ -30,7 +31,8 @@
   },
   "shoppingList": {
     "createNew": "Create new entry",
-    "edit": "Edit entry"
+    "edit": "Edit entry",
+    "deleteWarning": "Are you sure that you want to delete this entry?"
   },
   "menu": {
     "signOut": "sign out"
