--- a/SharedShoppingList.Client/src/assets/i18n/en.json
+++ b/SharedShoppingList.Client/src/assets/i18n/en.json
@@ -19,6 +19,7 @@
   "name": "name",
   "quantity": "quantity",
   "confirmRemoval": "confirm removal",
+  "regenerate": "regenerate",
   "userGroups": {
     "listHeader": "Your groups",
     "members": "member(s)",
@@ -26,7 +27,6 @@
     "createNew": "Create new group",
     "join": "Join group",
     "inviteCode": "invite code",
-    "inviteCodes": "invite codes",
     "shoppingList": "shopping list"
   },
   "shoppingList": {
