feat(client): display username of signed in user

--- a/SharedShoppingList.Client/src/assets/i18n/en.json
+++ b/SharedShoppingList.Client/src/assets/i18n/en.json
@@ -20,6 +20,7 @@
   "quantity": "quantity",
   "confirmRemoval": "confirm removal",
   "regenerate": "regenerate",
+  "signedInAs": "Signed in as",
   "userGroups": {
     "listHeader": "Your groups",
     "membersLabel": "member(s)",
